--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
     "@types/node": "^16.11.26",
     "@types/react": "^17.0.43",
     "@types/react-dom": "^17.0.14",
+    "firebase": "^9.8.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
+    "react-toastify": "^9.0.1",
+    "react-transition-group": "^4.4.2",
     "recoil": "^0.7.0",
     "typescript": "^4.6.3",
     "web-vitals": "^2.1.4"
@@ -43,6 +46,8 @@
     ]
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.0",
+    "@types/react-transition-group": "^4.4.4",
     "tailwindcss": "^3.0.23"
   }
 }
